--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 body {
     margin: 0;
-    font-family: 'Shantell Sans', cursive;;
+    font-family: 'Shantell Sans', cursive;
+    background-image: url("background1.png");
 }
 
 .title {
     text-align: center;
     font-size: 55px;
     margin-top: 15px;
+    text-shadow: 2px 2px 4px #4576E4;
 }
 
 h2 {
@@ -59,6 +61,15 @@ button {
     font-weight: bold;
     padding: 0;
     border-radius: 8px;
+    border: 1px solid #FD83AF;
+    background-color: #D4B6FF;
+    
+    
+}
+
+button:hover {
+    box-shadow: 2px 2px 10px 5px #FF699F;
+    border: 3px solid #FD83AF;
 }
 
 .clear-container {
@@ -99,6 +110,7 @@ button {
 #canvas {
     width: 500px;
     height: 500px;
-    border: 1px solid black;
+    border: 2px solid black;
     margin-top: 20px;
+    background-color: #fff;
 }
